[package]
name = "blake2-rfc"
version = "0.2.18"
authors = ["Cesar Eduardo Barros <cesarb@cesarb.eti.br>"]
description = "A pure Rust implementation of BLAKE2 based on RFC 7693."
documentation = "https://docs.rs/blake2-rfc"
repository = "https://github.com/cesarb/blake2-rfc"
readme = "README.md"
keywords = ["blake2", "blake2b", "blake2s", "hash", "crypto"]
categories = ["cryptography", "no-std"]
license = "MIT OR Apache-2.0"

[badges]
travis-ci = { repository = "cesarb/blake2-rfc" }

[features]
default = ["mesalock_sgx"]
mesalock_sgx = ["sgx_tstd"]
simd = []
simd_opt = ["simd"]
simd_asm = ["simd_opt"]
std = []

[dependencies]
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

arrayvec = { version = "0.5.1", git = "https://github.com/sgx-test/arrayvec-sgx", branch = "sgx", default-features = false }
constant_time_eq = { version = "0.1.3", git = "https://github.com/sgx-test/constant_time_eq-sgx" }

[dev-dependencies]
data-encoding = "2.0.0"
